--- a/.github/workflows/deploy-sites.yml
+++ b/.github/workflows/deploy-sites.yml
@@ -5,51 +5,58 @@ on:
   push:
     branches: [ main ]
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
-  find-projects:
-    runs-on: ubuntu-latest
-    outputs:
-      projects: ${{ steps.find.outputs.projects }}
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Find all projects
-      id: find
-      run: |
-        projects=""
-        for project_dir in CoursesCertificationProjects/Responsive-Web-Design/*/; do
-          if [ -d "$project_dir" ] && [ -f "${project_dir}index.html" ]; then
-            project_name=$(basename "$project_dir")
-            url_name=$(echo "$project_name" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9]/-/g' | sed 's/--*/-/g' | sed 's/^-\|-$//g')
-            if [ -z "$projects" ]; then
-              projects="$project_name:$url_name:$project_dir"
-            else
-              projects="$projects|$project_name:$url_name:$project_dir"
-            fi
-          fi
-        done
-        echo "projects=$projects" >> $GITHUB_OUTPUT
-        echo "Found projects: $projects"
-
   deploy:
-    needs: find-projects
     runs-on: ubuntu-latest
-    if: needs.find-projects.outputs.projects != ''
     steps:
     - uses: actions/checkout@v3
     
-    - name: Deploy all projects
-      run: |
-        IFS='|' read -ra PROJECT_LIST <<< "${{ needs.find-projects.outputs.projects }}"
+    - name: Deploy Product Landing Page
+      if: hashFiles('CoursesCertificationProjects/Responsive-Web-Design/Product-Landing-Page/index.html') != ''
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./CoursesCertificationProjects/Responsive-Web-Design/Product-Landing-Page
+        destination_dir: product-landing-page
         
-        # Create portfolio index
-        mkdir -p _site
-        cat > _site/index.html << 'EOF'
+    - name: Deploy Survey Form
+      if: hashFiles('CoursesCertificationProjects/Responsive-Web-Design/Survey-Form/index.html') != ''
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./CoursesCertificationProjects/Responsive-Web-Design/Survey-Form
+        destination_dir: survey-form
+
+    - name: Deploy Technical Documentation
+      if: hashFiles('CoursesCertificationProjects/Responsive-Web-Design/Technical-Documentation/index.html') != ''
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./CoursesCertificationProjects/Responsive-Web-Design/Technical-Documentation
+        destination_dir: technical-documentation
+
+    - name: Deploy Tribute Page
+      if: hashFiles('CoursesCertificationProjects/Responsive-Web-Design/Tribute-Page/index.html') != ''
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./CoursesCertificationProjects/Responsive-Web-Design/Tribute-Page
+        destination_dir: tribute-page
+
+    # Add more projects here as needed - just copy the pattern above
+    # Example for a new project:
+    # - name: Deploy My New Project
+    #   if: hashFiles('CoursesCertificationProjects/Responsive-Web-Design/My-New-Project/index.html') != ''
+    #   uses: peaceiris/actions-gh-pages@v3
+    #   with:
+    #     github_token: ${{ secrets.GITHUB_TOKEN }}
+    #     publish_dir: ./CoursesCertificationProjects/Responsive-Web-Design/My-New-Project
+    #     destination_dir: my-new-project
+
+    - name: Create Portfolio Index
+      run: |
+        mkdir -p portfolio
+        cat > portfolio/index.html << 'EOF'
         <!DOCTYPE html>
         <html lang="en">
         <head>
@@ -58,115 +65,94 @@ jobs:
             <title>My freeCodeCamp Projects</title>
             <style>
                 body { 
-                    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; 
-                    max-width: 1200px; 
+                    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+                    max-width: 1000px; 
                     margin: 0 auto; 
                     padding: 40px 20px; 
-                    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-                    min-height: 100vh;
-                    color: white;
+                    background: #f5f5f5;
+                }
+                .container { 
+                    background: white; 
+                    padding: 40px; 
+                    border-radius: 10px; 
+                    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
                 }
                 h1 { 
                     text-align: center; 
-                    font-size: 2.5rem; 
-                    margin-bottom: 50px;
-                    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+                    color: #2c3e50; 
+                    margin-bottom: 40px;
+                    font-size: 2.5em;
                 }
                 .projects { 
                     display: grid; 
-                    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+                    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
                     gap: 30px; 
+                    margin-top: 30px; 
                 }
                 .project-card { 
-                    background: rgba(255,255,255,0.1); 
+                    border: 1px solid #e1e8ed; 
                     padding: 30px; 
-                    border-radius: 15px; 
-                    backdrop-filter: blur(10px);
-                    border: 1px solid rgba(255,255,255,0.2);
-                    transition: transform 0.3s ease;
+                    border-radius: 10px; 
+                    transition: transform 0.2s, box-shadow 0.2s;
+                    background: #fafafa;
                 }
                 .project-card:hover {
                     transform: translateY(-5px);
+                    box-shadow: 0 8px 25px rgba(0,0,0,0.1);
                 }
                 .project-card h2 { 
                     margin-top: 0; 
-                    color: #fff;
-                    font-size: 1.3rem;
+                    color: #34495e;
+                    font-size: 1.5em;
                 }
                 .project-link { 
                     display: inline-block; 
-                    background: rgba(255,255,255,0.2); 
+                    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
                     color: white; 
                     padding: 12px 24px; 
                     text-decoration: none; 
-                    border-radius: 25px; 
-                    border: 2px solid rgba(255,255,255,0.3);
-                    transition: all 0.3s ease;
+                    border-radius: 6px; 
                     font-weight: 500;
+                    transition: transform 0.2s;
                 }
                 .project-link:hover { 
-                    background: rgba(255,255,255,0.3);
                     transform: scale(1.05);
-                }
-                .footer {
-                    text-align: center;
-                    margin-top: 50px;
-                    opacity: 0.8;
                 }
             </style>
         </head>
         <body>
-            <h1>🚀 My freeCodeCamp Projects</h1>
-            <div class="projects">
-        EOF
-        
-        # Add each project to index
-        for project in "${PROJECT_LIST[@]}"; do
-          IFS=':' read -ra PROJECT_INFO <<< "$project"
-          project_name="${PROJECT_INFO[0]}"
-          url_name="${PROJECT_INFO[1]}"
-          project_path="${PROJECT_INFO[2]}"
-          
-          echo "Processing: $project_name -> $url_name"
-          
-          # Copy project to _site
-          mkdir -p "_site/$url_name"
-          cp -r "$project_path"* "_site/$url_name/"
-          
-          # Add to portfolio index
-          cat >> _site/index.html << EOF
-                <div class="project-card">
-                    <h2>$project_name</h2>
-                    <a href="./$url_name/" class="project-link">View Project →</a>
+            <div class="container">
+                <h1>🚀 My freeCodeCamp Projects</h1>
+                <div class="projects">
+                    <div class="project-card">
+                        <h2>📱 Product Landing Page</h2>
+                        <p>A responsive product landing page showcasing modern web design principles.</p>
+                        <a href="./product-landing-page/" class="project-link">View Project</a>
+                    </div>
+                    <div class="project-card">
+                        <h2>📝 Survey Form</h2>
+                        <p>An interactive survey form with validation and responsive design.</p>
+                        <a href="./survey-form/" class="project-link">View Project</a>
+                    </div>
+                    <div class="project-card">
+                        <h2>📚 Technical Documentation</h2>
+                        <p>A comprehensive technical documentation page with navigation.</p>
+                        <a href="./technical-documentation/" class="project-link">View Project</a>
+                    </div>
+                    <div class="project-card">
+                        <h2>🏛️ Tribute Page</h2>
+                        <p>A tribute page demonstrating clean layout and typography.</p>
+                        <a href="./tribute-page/" class="project-link">View Project</a>
+                    </div>
                 </div>
-        EOF
-        done
-        
-        # Finish the HTML
-        cat >> _site/index.html << 'EOF'
-            </div>
-            <div class="footer">
-                <p>Built with ❤️ for freeCodeCamp</p>
             </div>
         </body>
         </html>
         EOF
-        
-        echo "Portfolio created with projects:"
-        ls -la _site/
-    
-    - name: Upload Pages artifact
-      uses: actions/upload-pages-artifact@v2
-      with:
-        path: ./_site
 
-  deploy-pages:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v2
+    - name: Deploy Portfolio Index
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./portfolio
+        keep_files: true
