--- a/.github/workflows/deploy-to-pages.yml
+++ b/.github/workflows/deploy-to-pages.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'CoursesCertificationProjects/**'
+      - 'Practice/**'
   workflow_dispatch:
 
 jobs:
@@ -31,103 +32,258 @@ jobs:
               <title>freeCodeCamp Projects Portfolio</title>
               <style>
                   body { 
-                      font-family: Arial, sans-serif; 
+                      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; 
                       max-width: 1200px; 
                       margin: 0 auto; 
                       padding: 20px;
                       background-color: #f5f5f5;
+                      line-height: 1.6;
+                      color: #333;
                   }
                   .header {
                       text-align: center;
-                      background: #0a0a23;
+                      background: linear-gradient(135deg, #0a0a23 0%, #1b1b32 100%);
                       color: white;
-                      padding: 40px 20px;
-                      border-radius: 10px;
-                      margin-bottom: 30px;
+                      padding: 50px 20px;
+                      border-radius: 15px;
+                      margin-bottom: 40px;
+                      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
                   }
-                  .header h1 { font-size: 2.5rem; margin: 0; }
-                  .header p { font-size: 1.2rem; margin: 10px 0 0 0; opacity: 0.9; }
-                  .projects { 
+                  .header h1 { 
+                      font-size: 3rem; 
+                      margin: 0; 
+                      font-weight: 700;
+                  }
+                  .header p { 
+                      font-size: 1.3rem; 
+                      margin: 15px 0 0 0; 
+                      opacity: 0.9; 
+                  }
+                  .section-header {
+                      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                      color: white;
+                      padding: 20px;
+                      border-radius: 10px;
+                      margin: 40px 0 20px 0;
+                      text-align: center;
+                  }
+                  .section-header h2 {
+                      margin: 0;
+                      font-size: 2rem;
+                      font-weight: 600;
+                  }
+                  .section-header p {
+                      margin: 8px 0 0 0;
+                      opacity: 0.9;
+                      font-size: 1.1rem;
+                  }
+                  .projects-grid, .practice-grid { 
                       display: grid; 
-                      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-                      gap: 20px; 
+                      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); 
+                      gap: 25px; 
+                      margin-bottom: 40px;
                   }
-                  .project { 
+                  .project, .practice { 
                       background: white;
-                      padding: 25px;
-                      border-radius: 10px;
-                      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-                      transition: transform 0.3s ease;
+                      padding: 30px;
+                      border-radius: 12px;
+                      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+                      transition: all 0.3s ease;
+                      border: 1px solid #e1e5e9;
                   }
-                  .project:hover { transform: translateY(-5px); }
-                  .project h3 { color: #0a0a23; margin: 0 0 10px 0; }
-                  .project p { color: #666; margin: 0 0 15px 0; }
-                  .project a { 
-                      background: #0a0a23;
+                  .project:hover, .practice:hover { 
+                      transform: translateY(-8px); 
+                      box-shadow: 0 12px 35px rgba(0,0,0,0.15);
+                      border-color: #667eea;
+                  }
+                  .project h3, .practice h3 { 
+                      color: #0a0a23; 
+                      margin: 0 0 12px 0; 
+                      font-size: 1.4rem;
+                      font-weight: 600;
+                  }
+                  .project p, .practice p { 
+                      color: #666; 
+                      margin: 0 0 20px 0; 
+                      line-height: 1.5;
+                  }
+                  .project a, .practice a { 
+                      background: linear-gradient(135deg, #0a0a23 0%, #1b1b32 100%);
                       color: white;
-                      padding: 10px 20px;
+                      padding: 12px 24px;
                       text-decoration: none;
-                      border-radius: 5px;
+                      border-radius: 8px;
                       display: inline-block;
+                      font-weight: 500;
+                      transition: all 0.3s ease;
                   }
-                  .project a:hover { background: #1b1b32; }
+                  .project a:hover, .practice a:hover { 
+                      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                      transform: scale(1.05);
+                      box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
+                  }
+                  .practice a {
+                      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                  }
+                  .practice a:hover {
+                      background: linear-gradient(135deg, #0a0a23 0%, #1b1b32 100%);
+                  }
+                  .stats {
+                      background: white;
+                      padding: 20px;
+                      border-radius: 10px;
+                      text-align: center;
+                      margin: 30px 0;
+                      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+                  }
+                  .stats h3 {
+                      color: #0a0a23;
+                      margin: 0 0 10px 0;
+                  }
+                  .stats p {
+                      color: #666;
+                      margin: 0;
+                  }
+                  @media (max-width: 768px) {
+                      .projects-grid, .practice-grid {
+                          grid-template-columns: 1fr;
+                      }
+                      .header h1 {
+                          font-size: 2.2rem;
+                      }
+                      .header p {
+                          font-size: 1.1rem;
+                      }
+                  }
               </style>
           </head>
           <body>
               <div class="header">
-                  <h1>freeCodeCamp Projects</h1>
-                  <p>My Web Development Portfolio</p>
+                  <h1>🚀 freeCodeCamp Portfolio</h1>
+                  <p>My Web Development Journey</p>
               </div>
-              <div class="projects">
+              
+              <div class="stats">
+                  <h3>Portfolio Statistics</h3>
+                  <p><!-- STATS_PLACEHOLDER --></p>
+              </div>
+              
+              <div class="section-header">
+                  <h2>📋 Certification Projects</h2>
+                  <p>Required projects for freeCodeCamp certifications</p>
+              </div>
+              <div class="projects-grid">
                   <!-- PROJECTS_PLACEHOLDER -->
+              </div>
+              
+              <div class="section-header">
+                  <h2>💡 Practice Exercises</h2>
+                  <p>Skills-building exercises and coding challenges</p>
+              </div>
+              <div class="practice-grid">
+                  <!-- PRACTICE_PLACEHOLDER -->
               </div>
           </body>
           </html>
           EOF
           
+          # Process Certification Projects
           PROJECT_COUNT=0
           echo "" > projects.txt
           
           for project_dir in CoursesCertificationProjects/Responsive-Web-Design/*/; do
             if [ -d "$project_dir" ] && [ -f "${project_dir}index.html" ]; then
               PROJECT_NAME=$(basename "$project_dir")
-              echo "Processing project: $PROJECT_NAME"
+              echo "Processing certification project: $PROJECT_NAME"
               
               mkdir -p "build/$PROJECT_NAME"
               cp -r "$project_dir"* "build/$PROJECT_NAME/" 2>/dev/null || true
               
+              # Create a more descriptive title
+              DISPLAY_NAME=$(echo "$PROJECT_NAME" | sed 's/-/ /g')
+              
               echo "<div class=\"project\">" >> projects.txt
-              echo "<h3>$PROJECT_NAME</h3>" >> projects.txt
-              echo "<p>A responsive web design project</p>" >> projects.txt
-              echo "<a href=\"./$PROJECT_NAME/\">View Project</a>" >> projects.txt
+              echo "<h3>$DISPLAY_NAME</h3>" >> projects.txt
+              echo "<p>A responsive web design certification project showcasing HTML, CSS, and modern web development practices.</p>" >> projects.txt
+              echo "<a href=\"./$PROJECT_NAME/\">View Project →</a>" >> projects.txt
               echo "</div>" >> projects.txt
               
               PROJECT_COUNT=$((PROJECT_COUNT + 1))
             fi
           done
           
-          echo "Found $PROJECT_COUNT projects"
+          # Process Practice Projects
+          PRACTICE_COUNT=0
+          echo "" > practice.txt
           
+          for practice_dir in Practice/Responsive-Web-Design/*/; do
+            if [ -d "$practice_dir" ] && [ -f "${practice_dir}index.html" ]; then
+              PRACTICE_NAME=$(basename "$practice_dir")
+              echo "Processing practice project: $PRACTICE_NAME"
+              
+              # Create practice directory with "practice-" prefix to avoid conflicts
+              mkdir -p "build/practice-$PRACTICE_NAME"
+              cp -r "$practice_dir"* "build/practice-$PRACTICE_NAME/" 2>/dev/null || true
+              
+              # Create a more descriptive title
+              DISPLAY_NAME=$(echo "$PRACTICE_NAME" | sed 's/-/ /g' | sed 's/CSS/CSS /')
+              
+              echo "<div class=\"practice\">" >> practice.txt
+              echo "<h3>$DISPLAY_NAME</h3>" >> practice.txt
+              echo "<p>A hands-on coding exercise to practice specific HTML and CSS concepts and techniques.</p>" >> practice.txt
+              echo "<a href=\"./practice-$PRACTICE_NAME/\">Try Exercise →</a>" >> practice.txt
+              echo "</div>" >> practice.txt
+              
+              PRACTICE_COUNT=$((PRACTICE_COUNT + 1))
+            fi
+          done
+          
+          echo "Found $PROJECT_COUNT certification projects and $PRACTICE_COUNT practice exercises"
+          
+          # Handle empty sections
           if [ $PROJECT_COUNT -eq 0 ]; then
-            echo "<div class=\"project\"><h3>No projects found</h3><p>Add projects to get started</p></div>" > projects.txt
+            echo "<div class=\"project\"><h3>No certification projects found</h3><p>Certification projects will appear here once added</p></div>" > projects.txt
           fi
           
+          if [ $PRACTICE_COUNT -eq 0 ]; then
+            echo "<div class=\"practice\"><h3>No practice exercises found</h3><p>Practice exercises will appear here once added</p></div>" > practice.txt
+          fi
+          
+          # Create stats content
+          TOTAL_COUNT=$((PROJECT_COUNT + PRACTICE_COUNT))
+          echo "$TOTAL_COUNT total projects • $PROJECT_COUNT certification projects • $PRACTICE_COUNT practice exercises" > stats.txt
+          
+          # Replace placeholders using Python
           python3 << 'PYTHON_EOF'
           with open('build/index.html', 'r') as f:
               content = f.read()
           
+          # Read projects content
           with open('projects.txt', 'r') as f:
               projects = f.read()
           
+          # Read practice content
+          with open('practice.txt', 'r') as f:
+              practice = f.read()
+              
+          # Read stats content
+          with open('stats.txt', 'r') as f:
+              stats = f.read()
+          
+          # Replace all placeholders
           content = content.replace('<!-- PROJECTS_PLACEHOLDER -->', projects)
+          content = content.replace('<!-- PRACTICE_PLACEHOLDER -->', practice)
+          content = content.replace('<!-- STATS_PLACEHOLDER -->', stats)
           
           with open('build/index.html', 'w') as f:
               f.write(content)
           PYTHON_EOF
           
-          rm projects.txt
+          # Clean up temp files
+          rm projects.txt practice.txt stats.txt
+          
           echo "Build directory structure:"
-          find build -type f | head -20
+          find build -type f | head -30
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
